@@ -1,3 +1,8 @@
+2001-06-04  Havoc Pennington  <hp@redhat.com>
+
+	* gtk/gtkrange.c (gtk_range_button_press): on middle click, center
+	slider on the click.
+
 2001-06-03  Havoc Pennington  <hp@pobox.com>
 
 	* gtk/gtkstyle.c (gtk_default_draw_slider): make this special-case
